--- a/Code/Mantid/API/API.vcproj
+++ b/Code/Mantid/API/API.vcproj
@@ -382,6 +382,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\test\ParInstrumentTest.h"
+				>
+			</File>
+			<File
 				RelativePath=".\inc\MantidAPI\RefAxis.h"
 				>
 			</File>
