--- a/Code/Mantid/Geometry/Geometry.vcproj
+++ b/Code/Mantid/Geometry/Geometry.vcproj
@@ -626,7 +626,15 @@
 				>
 			</File>
 			<File
+				RelativePath=".\test\ParDetectorTest.h"
+				>
+			</File>
+			<File
 				RelativePath=".\inc\MantidGeometry\ParObjComponent.h"
+				>
+			</File>
+			<File
+				RelativePath=".\test\ParObjComponentTest.h"
 				>
 			</File>
 			<File
@@ -670,11 +678,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\inc\MantidGeometry\RotCounter.h"
+				RelativePath=".\auxinc\RotCounter.h"
 				>
 			</File>
 			<File
-				RelativePath=".\auxinc\RotCounter.h"
+				RelativePath=".\inc\MantidGeometry\RotCounter.h"
 				>
 			</File>
 			<File
