Included a property in Mantid.properties to disable the algorithm chaining machinery. Closes #341

--- a/Code/Mantid/release/Mantid.properties
+++ b/Code/Mantid/release/Mantid.properties
@@ -26,3 +26,7 @@ instrumentDefinition.directory = ../../../../Test/Instrument
 #ManagedWorkspace.MinSize = 0
 ManagedWorkspace.DataBlockSize = 4000
 ManagedWorkspace.FilePath = /nonsense/fdghjksdg
+
+#Uncommenting the line below will enable algorithm chain re-running whenever a
+#workspace is replaced. Uncommenting and setting it to 0 will also turn it off 
+#AlgorithmChaining.SwitchedOn = 1
