refs #339 Building of geometry for instrument using OpenCASCADE

--- a/Code/Mantid/Geometry/Geometry.vcproj
+++ b/Code/Mantid/Geometry/Geometry.vcproj
@@ -109,8 +109,9 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				AdditionalOptions="/DWNT"
 				Optimization="3"
-				AdditionalIncludeDirectories="&quot;../../Third_Party/include/gts/glib-2.0&quot;;../../Third_Party/include/gts;inc;Deprecated/inc;../Kernel/inc;../../Third_Party/include"
+				AdditionalIncludeDirectories="&quot;../../Third_Party/include/gts/glib-2.0&quot;;../../Third_Party/include/gts;inc;Deprecated/inc;../Kernel/inc;../../Third_Party/include;../../Third_Party/include/OpenCascade"
 				PreprocessorDefinitions="_USE_MATH_DEFINES;MS_VISUAL_STUDIO;IN_MANTID_GEOMETRY=1;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE;_SCL_SECURE_NO_DEPRECATE"
 				RuntimeLibrary="2"
 			/>
@@ -125,7 +126,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="$(SolutionName)kernel.lib gsl.lib gts-0.7.lib opengl32.lib glu32.lib"
+				AdditionalDependencies="$(SolutionName)kernel.lib gsl.lib gts-0.7.lib opengl32.lib glu32.lib TKBO.lib TKPrim.lib TKBRep.lib TKernel.lib TKTopAlgo.lib TKMath.lib TKMesh.lib TKG2d.lib"
 				OutputFile="$(OutDir)\$(SolutionName)$(ProjectName).dll"
 				AdditionalLibraryDirectories="../release;../../Third_Party/lib/win32"
 			/>
@@ -283,6 +284,18 @@
 			</File>
 			<File
 				RelativePath=".\src\ObjectSurfaceEvaluator.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\OCGeometryGenerator.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\OCGeometryHandler.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\OCGeometryRenderer.cpp"
 				>
 			</File>
 			<File
@@ -562,11 +575,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\inc\MantidGeometry\Matrix.h"
+				RelativePath=".\auxinc\Matrix.h"
 				>
 			</File>
 			<File
-				RelativePath=".\auxinc\Matrix.h"
+				RelativePath=".\inc\MantidGeometry\Matrix.h"
 				>
 			</File>
 			<File
@@ -595,6 +608,18 @@
 			</File>
 			<File
 				RelativePath=".\test\ObjectTest.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidGeometry\OCGeometryGenerator.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidGeometry\OCGeometryHandler.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidGeometry\OCGeometryRenderer.h"
 				>
 			</File>
 			<File
