Add methods to: TimeSeriesProperty, PropertyMap, LoadRaw2, Instrument, LoadInstrument and added class: XMLfilename to handle the info about parameter/logfiles defined in instrument definition files.
Got to the stage where parameter map of workspace is populated, for now using the
first value in a logfile. Refs #362.

--- a/Code/Mantid/DataHandling/DataHandling.vcproj
+++ b/Code/Mantid/DataHandling/DataHandling.vcproj
@@ -255,6 +255,10 @@
 				RelativePath=".\src\LoadRaw\vms_convert.cpp"
 				>
 			</File>
+			<File
+				RelativePath=".\src\XMLlogfile.cpp"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
@@ -391,6 +395,10 @@
 			</File>
 			<File
 				RelativePath=".\src\LoadRaw\vms_convert.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidDataHandling\XMLlogfile.h"
 				>
 			</File>
 		</Filter>
