--- a/Code/Mantid/API/API.vcproj
+++ b/Code/Mantid/API/API.vcproj
@@ -252,6 +252,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\WorkspaceProperty.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\WorkspaceTracer.cpp"
 				>
 			</File>
