re #369. ManagedWorkspace.MinSize property is renamed to ManagedWorkspace.LowerMemoryLimit. MemoryManager puts limits to its values: from 0 to 150%.

--- a/Code/Mantid/API/API.vcproj
+++ b/Code/Mantid/API/API.vcproj
@@ -252,7 +252,7 @@
 				>
 			</File>
 			<File
-				RelativePath=".\WorkspaceProperty.cpp"
+				RelativePath=".\src\WorkspaceProperty.cpp"
 				>
 			</File>
 			<File
