--- a/Code/Mantid/release/Mantid.properties
+++ b/Code/Mantid/release/Mantid.properties
@@ -22,8 +22,17 @@ logging.channels.signalChannel.class = SignalChannel
 #Where to load instrument definition files from
 instrumentDefinition.directory = ../../../../Test/Instrument
 
+#
+# ManagedWorkspace.LowerMemoryLimit sets the memory limit to trigger the use of 
+# a ManagedWorkspace. A ManagedWorkspace will be used for a workspace requiring greater amount of memory 
+# than defined by LowerMemoryLimit. LowerMemoryLimit is a precentage of the physical memory available for
+# the process. On Linux it is the free physical memory, on Windows it is the smaller of the free physical memory
+# and the available virtual memory. The default value for LowerMemoryLimit is 40%. Setting the limit too high
+# may lead to unrecoverable bad allocations. If this happens the advice is to close Mantid and relaunch it 
+# with a smaller LowerMemoryLimit.
+# 
 # Uncommenting the line below will lead to all 2D workspaces being of the ManagedWorkspace2D variety
-#ManagedWorkspace.MinSize = 0
+#ManagedWorkspace.LowerMemoryLimit = 0
 ManagedWorkspace.DataBlockSize = 4000
 ManagedWorkspace.FilePath = /nonsense/fdghjksdg
 
