closes #376 Add a spectra that sums all of the spectra in a workspace

--- a/Code/Mantid/Algorithms/Algorithms.vcproj
+++ b/Code/Mantid/Algorithms/Algorithms.vcproj
@@ -286,6 +286,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\SumSpectra.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\Unwrap.cpp"
 				>
 			</File>
@@ -465,6 +469,14 @@
 			</File>
 			<File
 				RelativePath=".\inc\MantidAlgorithms\StripPeaks.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidAlgorithms\SumSpectra.h"
+				>
+			</File>
+			<File
+				RelativePath=".\test\SumSpectraTest.h"
 				>
 			</File>
 			<File
