--- a/Code/Mantid/DataHandling/DataHandling.vcproj
+++ b/Code/Mantid/DataHandling/DataHandling.vcproj
@@ -228,6 +228,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\LoadRKH.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\ManagedRawFileWorkspace2D.cpp"
 				>
 			</File>
@@ -351,6 +355,10 @@
 			</File>
 			<File
 				RelativePath=".\test\LoadRawTest.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidDataHandling\LoadRKH.h"
 				>
 			</File>
 			<File
