First version of transmission correction for LOQ/SANS2D. Basically works, but still has some bells and whistles to be added. Re #375.

--- a/Code/Mantid/Algorithms/Algorithms.vcproj
+++ b/Code/Mantid/Algorithms/Algorithms.vcproj
@@ -170,6 +170,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\CalculateTransmission.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\ChangeBinOffset.cpp"
 				>
 			</File>
@@ -313,6 +317,10 @@
 			</File>
 			<File
 				RelativePath=".\test\BinaryOperationTest.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidAlgorithms\CalculateTransmission.h"
 				>
 			</File>
 			<File
