Can now re-run LoadInstrument to change the instrument definition attached to a workspace. Re #385.

--- a/Code/Mantid/DataHandling/DataHandling.vcproj
+++ b/Code/Mantid/DataHandling/DataHandling.vcproj
@@ -240,6 +240,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\MoveInstrumentComponent.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\SaveCSV.cpp"
 				>
 			</File>
@@ -375,6 +379,10 @@
 			</File>
 			<File
 				RelativePath=".\test\MarkDeadDetectorsTest.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidDataHandling\MoveInstrumentComponent.h"
 				>
 			</File>
 			<File
