re #395. Added RebinPreserveValue algorithm.

--- a/Code/Mantid/Algorithms/Algorithms.vcproj
+++ b/Code/Mantid/Algorithms/Algorithms.vcproj
@@ -266,6 +266,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\RebinPreserveValue.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\RebinToWorkspace.cpp"
 				>
 			</File>
@@ -449,6 +453,10 @@
 			</File>
 			<File
 				RelativePath=".\test\PlusTest.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidAlgorithms\RebinPreserveValue.h"
 				>
 			</File>
 			<File
