Added method to ParameterMap to handle special case of adding/modifying a position parameter, and changed LoadRaw2 and XMLlogfile (and V3D) accordingly. Refs #362.

--- a/Code/Mantid/DataHandling/DataHandling.vcproj
+++ b/Code/Mantid/DataHandling/DataHandling.vcproj
@@ -429,6 +429,10 @@
 				RelativePath=".\inc\MantidDataHandling\XMLlogfile.h"
 				>
 			</File>
+			<File
+				RelativePath=".\test\XMLlogfileTest.h"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Resource Files"
