Allow binary operation where X units don't match in case where one workspace has single value per spectrum. Re #397.

--- a/Code/Mantid/Algorithms/Algorithms.vcproj
+++ b/Code/Mantid/Algorithms/Algorithms.vcproj
@@ -206,6 +206,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\CreateSingleValuedWorkspace.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\CropWorkspace.cpp"
 				>
 			</File>
@@ -373,6 +377,10 @@
 			</File>
 			<File
 				RelativePath=".\inc\MantidAlgorithms\CorrectToFile.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidAlgorithms\CreateSingleValuedWorkspace.h"
 				>
 			</File>
 			<File
