--- a/Code/Mantid/DataHandling/DataHandling.vcproj
+++ b/Code/Mantid/DataHandling/DataHandling.vcproj
@@ -232,6 +232,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\LogParser.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\ManagedRawFileWorkspace2D.cpp"
 				>
 			</File>
@@ -367,6 +371,10 @@
 			</File>
 			<File
 				RelativePath=".\inc\MantidDataHandling\LoadRKH.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidDataHandling\LogParser.h"
 				>
 			</File>
 			<File
