--- a/Code/Mantid/debug/Mantid.properties
+++ b/Code/Mantid/debug/Mantid.properties
@@ -20,7 +20,7 @@ logging.loggers.root.channel.channel3 = signalChannel
 logging.channels.signalChannel.class = SignalChannel
 
 #Where to load instrument definition files from
-instrumentDefinition.directory = ../../../../Test/Instrument
+instrumentDefinition.directory = ../../../Test/Instrument
 
 # Uncommenting the line below will lead to all 2D workspaces being of the ManagedWorkspace2D variety
 #ManagedWorkspace.MinSize = 0
