--- a/Code/Mantid/Geometry/Geometry.vcproj
+++ b/Code/Mantid/Geometry/Geometry.vcproj
@@ -430,6 +430,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\vtkGeometryCacheReader.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\vtkGeometryCacheWriter.cpp"
 				>
 			</File>
@@ -608,11 +612,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\auxinc\Matrix.h"
+				RelativePath=".\inc\MantidGeometry\Matrix.h"
 				>
 			</File>
 			<File
-				RelativePath=".\inc\MantidGeometry\Matrix.h"
+				RelativePath=".\auxinc\Matrix.h"
 				>
 			</File>
 			<File
