--- a/Code/qtiplot/qtiplot/icons/qtiplot.rc
+++ b/Code/qtiplot/qtiplot/icons/qtiplot.rc
@@ -1,1 +1,1 @@
-IDI_ICON1               ICON    DISCARDABLE     "qtiplot.ico"
+IDI_ICON1               ICON    DISCARDABLE     "MantidPlotDesktop.ico"
