refs #389 Improvements: 1) Changed the instrument tree from static tree to dynamic model view 2) Added OpenGL memory exception 3) Display rendering tries fast method of display lists and falls back to slow immediate rendering on OpenGL memory error.

--- a/Code/Mantid/Kernel/Kernel.vcproj
+++ b/Code/Mantid/Kernel/Kernel.vcproj
@@ -233,6 +233,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\System.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\TimeSeriesProperty.cpp"
 				>
 			</File>
